add_executable(aw_sizefield aw_sizefield.cc)
target_link_libraries(aw_sizefield PUBLIC core)
add_executable(aw_isofunc aw_isofunc.cc)
target_link_libraries(aw_isofunc PUBLIC core)
add_executable(aw_isofunc2 aw_isofunc2.cc)
target_link_libraries(aw_isofunc2 PUBLIC core apf_cap)
add_executable(mds2cre mds2cre.cc)
target_link_libraries(mds2cre PUBLIC core apf_cap)
add_executable(cre2vtk cre2vtk.cc)
target_link_libraries(cre2vtk PUBLIC core apf_cap)
add_executable(list_readers list_readers.cc)
target_link_libraries(list_readers PUBLIC apf_cap)
add_executable(cre2mds cre2mds.cc)
target_link_libraries(cre2mds PUBLIC core apf_cap)
add_executable(unif unif.cc)
target_link_libraries(unif PUBLIC core)
add_executable(aw_isoadapt aw_isoadapt.cc)
target_link_libraries(aw_isoadapt PRIVATE core)
add_executable(mds2vtk mds2vtk.cc)
target_link_libraries(mds2vtk PRIVATE core)
add_executable(aw_expadapt aw_expadapt.cc)
target_link_libraries(aw_expadapt PRIVATE core)
