function(util_exe_func exename)
  add_executable(${exename} ${ARGN})
  target_link_libraries(${exename} core)
endfunction(util_exe_func)

function(cap_exe_func exename)
  if(ENABLE_CAPSTONE)
    add_executable(${exename} ${ARGN})
    target_link_libraries(${exename} core apf_cap)
  endif()
endfunction(cap_exe_func)

util_exe_func(aw_sizefield aw_sizefield.cc)
util_exe_func(aw_isofunc aw_isofunc.cc)
cap_exe_func(aw_isofunc2 aw_isofunc2.cc)
cap_exe_func(mds2cre mds2cre.cc)
cap_exe_func(cre2vtk cre2vtk.cc)
cap_exe_func(list_readers list_readers.cc)
cap_exe_func(cre2mds cre2mds.cc)
util_exe_func(unif unif.cc)
util_exe_func(aw_isoadapt aw_isoadapt.cc)
util_exe_func(mds2vtk mds2vtk.cc)
util_exe_func(aw_expadapt aw_expadapt.cc aw_explf.cc)
util_exe_func(aniso_expadapt aniso_expadapt.cc aw_explf.cc)
